--- a/src/app/todo/todo-item/todo-item.component.html
+++ b/src/app/todo/todo-item/todo-item.component.html
@@ -1,9 +1,16 @@
 <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-<li class="completed">
+<li [ngClass]="{'completed': todo.completed, 'editing': edited}">
     <div class="view">
-        <input class="toggle" type="checkbox" checked>
-        <label>Taste JavaScript</label>
-        <button class="destroy"></button>
+        <input [formControl]="checkField"
+            [checked]="todo.completed"
+            class="toggle"
+            type="checkbox">
+        <label (dblclick)="editing()">{{todo.text}}</label>
+        <button (click)="deleteTodo()" class="destroy"></button>
     </div>
-    <input class="edit" value="Create a TodoMVC template">
+    <input [formControl]="txtInput"
+        #txtInputForm
+        (keyup.enter)="endEditing()"
+        (blur)="endEditing()"
+        class="edit" [value]="todo.text">
 </li>
